--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+streamlit
+python-dotenv
+pysqlite3-binary
+chromadb
+langchain
+langchain-chroma
+langchain-community
+langchain-core
+langchain-groq
+langchain-huggingface
+langchain-text-splitters
+duckdb
+sentence-transformers
+PyPDF2
+
 fastapi
 uvicorn
 langchain
